# bezier-encoder

./: Makefile  README.md  pyproject.toml
src/apps/: curve_visualizer.py
src/bezier_encoder/classes/: bezier.py  coordinates.py  points.py
src/bezier_encoder/plotting/: spherical_plot.py
src/bezier_encoder/scripts/: chat_gpt_planes.py  chat_gpt_script.py
src/bezier_encoder/utils/: lin_alg.py  spherical.py
